<resources>
    <string name="app_name">cardna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_back_btn_msg">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="setting_title">설정</string>
    <string name="setting_account_info_title">계정 정보</string>
    <string name="setting_account_info_social_login">소셜로그인 정보</string>
    <string name="setting_social_login_kakao">카카오</string>
    <string name="setting_social_login_naver">네이버</string>
    <string name="setting_question_title">문의</string>
    <string name="setting_question">문의하기</string>
    <string name="setting_app_setting_title">앱 설정</string>
    <string name="setting_app_alarm">알림 설정</string>
    <string name="setting_app_info_title">앱 정보</string>
    <string name="setting_app_info_version">버전 정보</string>
    <string name="setting_app_info_developer">개발자 정보</string>
    <string name="setting_app_info_privacy_policy">개인정보 처리방침</string>
    <string name="setting_app_info_service_operation_policy">서비스 이용약관</string>
    <string name="setting_app_info_opensource_license">오픈소스 라이선스</string>
    <string name="setting_etc_title">기타</string>
    <string name="setting_etc_secession">회원 탈퇴</string>
    <string name="setting_etc_logout">로그아웃</string>
    <string name="alarm_title">알림</string>
    <string name="version_info_title">버전 정보</string>
    <string name="version_info_current_version_sentence">현재 버전</string>
    <string name="version_info_current_version">1.0.0</string>
    <string name="developer_info_title">개발자 정보</string>
    <string name="developer_info_plan">Product Manager</string>
    <string name="developer_info_design">Designer</string>
    <string name="developer_info_android">Android Developer</string>
    <string name="developer_info_ios">iOS Developer</string>
    <string name="developer_info_back_end">Backend Developer</string>
    <string name="developer_info_plan_member">곽민주 이정재</string>
    <string name="developer_info_design_member">한지우 신혜원 이정아</string>
    <string name="developer_info_android_member">김다빈 박민우 이종찬</string>
    <string name="developer_info_ios_member">김혜수 이경민</string>
    <string name="developer_info_back_end_member">김희빈 이솔</string>
    <string name="dialog_logout_title">로그아웃 하시겠어요?</string>
    <string name="dialog_logout_cancle">취소</string>
    <string name="dialog_logout_confirm">확인</string>
    <string name="secession_title">탈퇴하실 건가요?</string>
    <string name="secession_btn">탈퇴하기</string>
    <string name="secession_title_sentence">탈퇴 이유를 알려주세요</string>
    <string name="secession_reason_one">삭제하고 싶은 콘텐츠가 있어요</string>
    <string name="secession_reason_two">개인정보 보호에 문제가 있어요</string>
    <string name="secession_reason_three">새 계정을 만들고 싶어요</string>
    <string name="secession_reason_four">오류가 많아요</string>
    <string name="secession_reason_five">기능이 마음에 들지 않아요</string>
    <string name="secession_reason_six">기타</string>
    <string name="secession_warning">내가 써준 카드너를 제외한 모든 데이터가 삭제됩니다.\n삭제 된 데이터는 복구할 수 없습니다.</string>
    <string name="item_friend_request_title">친구 요청</string>
    <string name="item_friend_request_count">3</string>
    <string name="item_friend_request_view_all">모두 보기</string>
    <string name="item_friend_request_friend_name">신혜원</string>
    <string name="item_friend_request_date">2022/03/12</string>
    <string name="item_friend_request_accept">수락</string>
    <string name="item_friend_request_refuse">거절</string>
    <string name="item_friend_request_accept_text">님과 친구가 되었어요</string>
    <string name="item_write_cardyou_friend_name">혜원</string>
    <string name="item_write_cardyou_sentence">님이 카드너를 적어줬어요</string>
    <string name="item_write_cardyou_date">2022/01/12</string>
    <string name="detail_card_title">퍼블리싱도 하는 디자이너</string>
    <string name="detail_card_content">정말말 대단해정말 대단해단해정말 대단해정말 대단해정말 대단해정말 단해단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말단해단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말단해단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말단해단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해정말 대단해단해</string>
    <string name="detail_card_name">다빈</string>
    <string name="detail_card_createdat">2022/01/12</string>
    <string name="detail_card_likecount">353</string>
    <string name="detail_card_from">From.</string>
    <string name="detail_card_cardyou_add">카드너 추가하기</string>
    <string name="insight_title">인사이트</string>
    <string name="insight_open_area">Open Area</string>
    <string name="insight_blind_area">Blind Area</string>
    <string name="insight_open_area_sentence">나도 알고, 타인도 아는 나의 모습이에요</string>
    <string name="insight_blind_sentence">나는 몰랐지만, 타인이 아는 나의 모습이에요</string>
    <string name="insight_open_area_explain">내가 쓴 카드 중 가장 많은 공감을 받은 카드</string>
    <string name="insight_blind_explain">타인이 써 준 카드 중 가장 많은 공감을 받은 카드</string>
    <string name="insight_open_area_title">배신을 잘해</string>
    <string name="insight_blind_title">요리를 잘해</string>
    <string name="insight_data_null_one">아직 인사이트를 얻기에</string>
    <string name="insight_data_null_two">데이터가 부족해요!</string>
    <string name="cardpack_make_new_cardme">나에 대한 카드를 새로\n작성해보세요</string>
    <string name="cardpack_make_new_cardyou">타인이 말하는 나를 카드로\n만들어보세요</string>
    <string name="cardpack_add_cardme">카드나 작성</string>
    <string name="cardpack_add_cardyou">카드너 추가</string>
    <string name="cardpack_friend_empty_cardme">아직 카드가 없어요</string>
    <string name="cardpack_friend_empty_cardyou">친구 소개글을 작성해보세요!</string>
    <string name="cardpack_friend_make_cardyou">카드너 작성</string>
    <string name="cardcreate_make_cardme">카드나 작성</string>
    <string name="cardcreate_make_cardyou">카드너 작성</string>
    <string name="cardcreate_make_cardme_title">나는</string>
    <string name="cardcreate_make_cardyou_title">%1$s님은</string>
    <string name="cardcreate_tv_keyword_length">%1$d/14</string>
    <string name="cardcreate_tv_detail_length">%1$d/200</string>
    <string name="cardcreate_complete">완료</string>
    <string name="cardcreate_bring_image">카드에 들어갈\n이미지를 넣어 보세요!</string>
    <string name="cardcreate_keyword_hint">키워드 중심으로 표현해보세요</string>
    <string name="cardcreate_tv_detail">더 자세하게 적어볼까요?</string>
    <string name="cardcreate_detail_hint">이 카드의 본문을 적어주세요\n설명, 자랑, 경험 등 어떤 내용도 좋아요 :)</string>
    <string name="cardcreate_bang">!</string>
    <string name="cardcreate_complete_cardme">카드나를 만들었어요!</string>
    <string name="cardcreate_complete_cardyou">카드너를 만들었어요!</string>
    <string name="cardcreate_complete_cardyou_fromstore">카드너가 추가됐어요!</string>
    <string name="bottom_image_complete">완료</string>
    <string name="bottom_image_gallery">사진</string>
    <string name="bottom_image_symbol">심볼</string>
    <string name="bottom_image_from_gallery">갤러리에서 가져오기</string>
    <string name="bottom_card_cardme">카드나 작성</string>
    <string name="bottom_card_cardme_detail">나에 대한 카드를 새로 작성해보세요</string>
    <string name="bottom_card_cardyou">카드너 추가</string>
    <string name="bottom_card_cardyou_detail">카드너 보관함에서 카드를 추가해보세요</string>
    <string name="cardshare_cardme">%1$s님의 카드나</string>
    <string name="cardshare_cardyou">%1$s님의 카드너</string>
    <string name="login_policy">CARDNA의 다음 사항에 동의하는 것으로 간주합니다.</string>
    <string name="login_gwa">과</string>
    <string name="login_policy_term_of_use">이용약관</string>
    <string name="login_private_policy">" 개인정보 정책"</string>
    <string name="signup_tv_title">이름을 알려주세요!</string>
    <string name="signup_tv_about">원활한 서비스 이용을 위해 실명으로 적어주세요 :)</string>
    <string name="signup_et_lastname">성</string>
    <string name="signup_et_firstname">이름</string>
    <string name="signup_btn_access">확인</string>
    <string name="signup_tv_username_check">님이 맞으신가요?</string>
    <string name="alert_tv_title">님이 맞으신가요?</string>
    <string name="alert_tv_about">이름은 한번 설정하면 변경이 불가해요!</string>
    <string name="alert_btn_negative">다시입력</string>
    <string name="alert_btn_positive">확인</string>
    <string name="setnamefinished_tv_message1">카드를</string>
    <string name="setnamefinished_tv_message2">추가하러</string>
    <string name="setnamefinished_tv_message3">가볼까요?</string>
    <string name="setnamefinished_btn_negative_text">다음에 할래요</string>
    <string name="setnamefinished_btn_positive_text">좋아요</string>
    <string name="maincard_tv_title">힘이들땐 하늘을 봐!</string>
    <string name="maincard_tv_username_tag">님은</string>
    <string name="maincard_tv_edit">edit</string>
    <string name="maincard_tv_empty_title">아직 대표카드가 없어요!</string>
    <string name="maincard_tv_empty_card_about">님을 잘 표현하는</string>
    <string name="maincard_tv_cardpack_text">카드팩 보기 -></string>
    <string name="maincard_tv_friend_empty_text">친구의 대표카드가 될 만한</string>
    <string name="maincard_tv_real_empty1">아직 카드가 없어요!</string>
    <string name="maincard_tv_real_empty2">카드팩에서 카드를 만들어볼까요?</string>
    <string name="mypage_name">김다빈</string>
    <string name="mypage_title">MY</string>
    <string name="mypage_code">김다빈#0318</string>
    <string name="mypage_friend">친구</string>
    <string name="mypage_search_name_hint">이름 검색</string>
    <string name="mypage_search_code_hint">친구코드 검색</string>
    <string name="mypage_search_code_friend_name">신혜원</string>
    <string name="mypage_search_code_apply_friend">친구 신청</string>
    <string name="mypage_search_code_waiting_friend">친구 요청 대기 중</string>
    <string name="mypage_search_code_friend">친구</string>
    <string name="mypage_search_no_result">앗! 검색 결과가 없어요 :(</string>
    <string name="dialog_cancle_friend_request">친구 요청을 취소하시겠어요?</string>
    <string name="dialog_cancle_friend_request_cancle">취소</string>
    <string name="dialog_cancle_friend_request_confirm">확인</string>
    <string name="dialog_break_up_friend_title_one">친구를 끊으시겠어요?</string>
    <string name="dialog_break_up_friend_title_two">상대방에게도 친구가 취소돼요</string>
    <string name="dialog_break_up_friend_confirm">확인</string>
    <string name="dialog_break_up_friend_cancle">취소</string>
    <string name="dialog_apply_request">님이 친구를 신청했어요!</string>
    <string name="dialog_apply_accept">수락</string>
    <string name="dialog_apply_reject">거절</string>
    <string name="dialog_main_card_block_title">신고가 3번 접수되어 계정이 정지됐어요</string>
    <string name="dialog_main_card_block_about">자세한 사항은\nCARDNAteam@gmail.com로\n문의해주세요</string>
    <string name="edit_card_title">대표카드 수정</string>
    <string name="edit_card_finish">완료</string>
    <string name="edit_card_represent_before">나를 가장 잘 표현하는 카드를</string>
    <string name="edit_card_represent_gradient">대표카드</string>
    <string name="edit_card_represent_after">로 지정해보세요!</string>
    <string name="edit_card_seven">7</string>
    <string name="edit_card_slash">&#160;/&#160;</string>
    <string name="edit_card_float_button_message">카드팩에서 대표카드를 선택해보세요!</string>
    <string name="dialog_relation_confirm">확인</string>
    <string name="dialog_relation_cancel">취소</string>
    <string name="dialog_relation_progressing_cancel">친구요청을 취소하시겠어요?</string>
    <string name="dialog_relation_disconnect_title">친구를 끊으시겠어요?</string>
    <string name="dialog_relation_add_friend_title">친구를 추가하시겠어요?</string>
    <string name="dialog_relation_disconnect_about">상대방에게도 친구가 취소돼요</string>
    <string name="cardyoustore_mt_title">카드너 보관함</string>
    <string name="cardyoustore_card_title">이것은 카드너 보관함의 카드 타이틀</string>
    <string name="cardyoustore_card_name">다빈</string>
    <string name="cardyoustore_card_createdAt">2022/02/22</string>
    <string name="onboarding_cardme_title">카드나</string>
    <string name="onboarding_cardme_about">카드나는 내가 아는 나의 모습이 담긴 카드에요\n내가 어떤 사람인지 카드나로 만들어 이해해봐요!</string>
    <string name="onboarding_cardyou_title">카드너</string>
    <string name="onboarding_cardyou_about">카드너는 타인이 말해준 다양한 나의 모습이에요\n내가 어떤 사람인지 카드너를 받아 이해해봐요!</string>
    <string name="onboarding_represent_title">대표 카드</string>
    <string name="onboarding_represent_about">카드나, 카드너로\n나를 대표하는 카드를 설정해 나를 표현해봐요!</string>
    <string name="onboarding_insight_title">인사이트</string>
</resources>