<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_black"
        tools:context="org.cardna.presentation.ui.mypage.view.setting.SettingActivity">

        <TextView
            android:id="@+id/tv_setting_title"
            style="@style/mypage_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="설정"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_title"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="167dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/main_black"
                android:paddingStart="16dp"
                tools:context=".ui.mypage.SettingActivity">

                <TextView
                    android:id="@+id/tv_setting_account_info_title"
                    style="@style/setting_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/setting_account_info_title"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_account_info_social_login"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_margin_top"
                    android:text="@string/setting_account_info_social_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_account_info_title" />

                <TextView
                    android:id="@+id/tv_setting_question_title"
                    style="@style/setting_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/setting_question_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_account_info_social_login" />

                <TextView
                    android:id="@+id/tv_setting_question_by_email"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_margin_top"
                    android:text="@string/setting_question_by_email"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_question_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_question_title" />

                <TextView
                    android:id="@+id/tv_setting_app_setting_title"
                    style="@style/setting_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/setting_app_setting_title"
                    app:layout_constraintStart_toStartOf="@id/tv_setting_question_by_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_question_by_email" />

                <TextView
                    android:id="@+id/tv_setting_app_alarm"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_margin_top"
                    android:text="@string/setting_app_alarm"
                    app:layout_constraintStart_toStartOf="@id/tv_setting_app_setting_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_setting_title" />


                <TextView
                    android:id="@+id/tv_setting_app_info_title"
                    style="@style/setting_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/setting_app_info_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_alarm"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setting_app_alarm" />

                <TextView
                    android:id="@+id/tv_setting_app_info_version"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_margin_top"
                    android:text="@string/setting_app_info_version"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_info_title" />

                <TextView
                    android:id="@+id/tv_setting_app_info_developer"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting_app_info_developer"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_version"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_info_version" />

                <TextView
                    android:id="@+id/tv_setting_app_info_privacy_policy"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting_app_info_privacy_policy"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_developer"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_info_developer" />

                <TextView
                    android:id="@+id/tv_setting_app_info_service_operation_policy"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting_app_info_service_operation_policy"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_privacy_policy"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_info_privacy_policy" />

                <TextView
                    android:id="@+id/tv_setting_app_info_opensource_license"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting_app_info_opensource_license"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_service_operation_policy"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_app_info_service_operation_policy" />

                <TextView
                    android:id="@+id/tv_setting_etc_title"
                    style="@style/setting_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/setting_etc_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_app_info_opensource_license"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setting_app_info_opensource_license" />

                <TextView
                    android:id="@+id/tv_setting_etc_secession"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/setting_text_margin_top"
                    android:text="@string/setting_etc_secession"
                    app:layout_constraintStart_toStartOf="@+id/tv_setting_etc_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_etc_title" />

                <TextView
                    android:id="@+id/tv_setting_etc_logout"
                    style="@style/setting_sentence_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/setting_etc_logout"
                    app:layout_constraintStart_toStartOf="@id/tv_setting_etc_secession"
                    app:layout_constraintTop_toBottomOf="@id/tv_setting_etc_secession" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>