<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_black"
        tools:context="org.cardna.presentation.ui.setting.view.SettingActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_developer_info"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_developer_info_title"
                style="@style/mypage_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/developer_info_title" />
        </com.google.android.material.appbar.MaterialToolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_developer_info_plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mt_developer_info">

            <TextView
                android:id="@+id/tv_developer_info_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_light"
                android:text="@string/developer_info_plan"
                android:textColor="@color/white_3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_developer_info_plan_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/developer_info_plan_member"
                android:textColor="@color/white_1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_info_plan" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_developer_info_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ctl_developer_info_plan"
            app:layout_constraintStart_toStartOf="@+id/ctl_developer_info_plan"
            app:layout_constraintTop_toBottomOf="@id/ctl_developer_info_plan">

            <TextView
                android:id="@+id/tv_developer_info_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_light"
                android:text="@string/developer_info_design"
                android:textColor="@color/white_3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_developer_info_design_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/developer_info_design_member"
                android:textColor="@color/white_1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_info_design" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_tv_developer_info_android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ctl_developer_info_design"
            app:layout_constraintStart_toStartOf="@+id/ctl_developer_info_design"
            app:layout_constraintTop_toBottomOf="@id/ctl_developer_info_design">

            <TextView
                android:id="@+id/tv_developer_info_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_light"
                android:text="@string/developer_info_android"
                android:textColor="@color/white_3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_developer_info_android_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/developer_info_android_member"
                android:textColor="@color/white_1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_info_android" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_tv_developer_info_ios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ctl_tv_developer_info_android"
            app:layout_constraintStart_toStartOf="@+id/ctl_tv_developer_info_android"
            app:layout_constraintTop_toBottomOf="@id/ctl_tv_developer_info_android">

            <TextView
                android:id="@+id/tv_developer_info_ios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_light"
                android:text="@string/developer_info_ios"
                android:textColor="@color/white_3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_developer_info_ios_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/developer_info_ios_member"
                android:textColor="@color/white_1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_info_ios" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_tv_developer_info_back_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/ctl_tv_developer_info_ios"
            app:layout_constraintStart_toStartOf="@+id/ctl_tv_developer_info_ios"
            app:layout_constraintTop_toBottomOf="@id/ctl_tv_developer_info_ios">

            <TextView
                android:id="@+id/tv_developer_info_back_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_light"
                android:text="@string/developer_info_back_end"
                android:textColor="@color/white_3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_developer_info_back_end_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/developer_info_back_end_member"
                android:textColor="@color/white_1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_info_back_end" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>